--- a/src/app.html
+++ b/src/app.html
@@ -24,7 +24,7 @@
 			}
 		</style>
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" data-theme="skeleton">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
