--- a/src/app.html
+++ b/src/app.html
@@ -14,6 +14,8 @@
 			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
 			rel="stylesheet"
 		/>
+		<meta name="theme-color" content="#ffffff">
+
 		<style>
 			body {
 				font-family: 'Inter', sans-serif;
